fixed image bg overflow

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,14 +12,13 @@
 
 .background-image {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: url('../../src/assets/brooke-lark-230140.jpg');
   background-size: cover;
-  // experiment with didffernt bg position properties for mobile responsivness
   background-position: top;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   text-align: center;
+  overflow-y: scroll;
 }
 
 // override bootstrap navbar colours
